@@ -3,6 +3,8 @@ Revision history for Chart::GGPlot
 0.0004_02   2019-06-06   
   - Layer's show_legend attribute now really has effect.
   - New feature: geom_rect(), geom_tile()
+  - Fix Chart::GGPlot::Util::match() for cases where its second argument
+    has BAD values.
 
 0.0004_01   2019-06-05
   - New feature: experimental support of geom_smooth()
